test/bad/generics/call07.px

func f<A,B,C>(A->B->C g) def
    return

f(max)
